--- a/devcontainer/features/node/devcontainer-feature.json
+++ b/devcontainer/features/node/devcontainer-feature.json
@@ -1,12 +1,12 @@
 {
   "name": "Node",
   "id": "node",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "https://nodejs.org",
   "options": {
     "version": {
       "type": "string",
-      "default": "current",
+      "default": "20.x",
       "description": "node version"
     }
   }
